--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,14 @@
   @apply m-2 rounded-lg bg-light-secondary px-3 py-2 text-center text-sm font-bold text-black shadow transition duration-300 ease-in-out hover:bg-cyan-600 hover:text-light-bg dark:bg-dark-secondary dark:text-light-bg dark:hover:bg-cyan-600 md:text-base;
 }
 
+.resume-link {
+  @apply font-bold hover:text-black dark:hover:text-focus;
+}
+
+.resume {
+  @apply mb-10 bg-light-primary py-2 md:w-3/4;
+}
+
 .input-form {
   @apply w-full rounded border border-light-primary bg-transparent p-4 text-sm text-black focus:outline-none focus:ring-1 focus:ring-black dark:text-dark-primary dark:focus:ring-focus md:w-2/3 md:text-base;
 }
